--- a/css/style.css
+++ b/css/style.css
@@ -27,8 +27,8 @@ body {
 }
 
 #container {
-  width: 50.000em;
-  padding-top: 6.250em;
+/*  width: 50.000em;
+*/  padding-top: 6.250em;
   margin-left: auto;
   margin-right: auto; 
 }
