--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,13 @@ body {
   margin-right: auto; 
 }
 
+#container-about {
+  width: 50.000em;
+  padding-top: 6.250em;
+  margin-left: auto;
+  margin-right: auto; 
+}
+
 #banner-container {
   padding-top: 6.250em; 
 }
