--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,7 @@ body {
 }
 
 #article {
-  font-family: "ProximaNova";
+  font-family: 'Pragati Narrow' , sans-serif;
   font-size: 1.125em;
   line-height: 1.5em;
   color: #373737; }
@@ -133,6 +133,15 @@ body {
   font-weight: 700;
   display: inline;
   padding: 0.188em 0.500em 0.188em 0.375em; 
+}
+
+#word-title {
+    font-size: 1.875em;
+    font-family: 'Pragati Narrow' , sans-serif;
+    text-align: center;
+    font-weight: 700;
+    color: #444;
+    padding-bottom: 0.625em;
 }
 
 #logo:hover {
@@ -227,18 +236,26 @@ ol {
 .post-name {
   font-size: 35px;
   /*font-family: "ProximaNova";*/
-  letter-spacing: -2;
+  letter-spacing: -1;
   /*font-weight: 700; */
-  padding-bottom: 15px;
-}
+/*  padding-bottom: 5px;
+*/}
 
-.post-date {
+.post-date-blog {
   font-size: 1.250em;
   /*font-family: "ProximaNova";*/
   letter-spacing: -1;
   display: inline;
   color: #aaa;
   float: right; }
+
+  .post-date {
+  font-size: 1.5em;
+  font-family: 'Pragati Narrow' , sans-serif;
+  letter-spacing: -1;
+  display: inline;
+  color: #aaa;
+  float: left; }
 
 #writing-title,
 #contact-title {
