Added to Projects
Added edgy to projects. Content coming soon.

--- a/css/style.css
+++ b/css/style.css
@@ -180,7 +180,7 @@ body {
   display: block;
   margin-top: 3.750em;
   margin-bottom: 3.750em;
-  width: 40em !important;
+/*  width: 40em !important;*/
   margin-left: auto !important;
   margin-right: auto !important; 
 }
